--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
                 </div>
             </div>
             <div class="team-container">
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <div class="score-display">
                     <p id="guest-score"></p>
                 </div>
